--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -12,3 +12,7 @@ catalogs:
     prettier: ^3.6.2
     publint: ^0.3.15
     valibot: ^1.2.0
+    typescript-eslint: ^8.48.0
+    eslint: ^9.39.1
+    '@eslint/js': ^9.39.1
+    globals: ^16.5.0
