--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
 	"main": "src/index.js",
 	"scripts": {
 		"build": "pnpm -r build",
+		"changeset:version": "changeset version && pnpm --filter @e18e/mcp run update:version && git add --all",
 		"lint": "eslint . && prettier . --check",
-		"lint:fix": "eslint . --fix && prettier . --write"
+		"lint:fix": "eslint . --fix && prettier . --write",
+		"release": "changeset publish"
 	},
+	"packageManager": "pnpm@10.22.0",
 	"devDependencies": {
 		"@changesets/cli": "^2.29.7",
 		"@eslint/js": "catalog:tooling",
