--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,17 +2,18 @@ packages:
   - ./packages/*
 
 catalogs:
-  tmcp:
+  mcp:
+    '@modelcontextprotocol/inspector': ^0.17.2
     '@tmcp/adapter-valibot': ^0.1.5
     '@tmcp/transport-stdio': ^0.4.1
     tmcp: ^1.18.1
   tooling:
+    '@eslint/js': ^9.39.1
     '@types/node': ^24.0.15
     '@typescript/native-preview': 7.0.0-dev.20251125.1
+    eslint: ^9.39.1
+    globals: ^16.5.0
     prettier: ^3.6.2
     publint: ^0.3.15
-    valibot: ^1.2.0
     typescript-eslint: ^8.48.0
-    eslint: ^9.39.1
-    '@eslint/js': ^9.39.1
-    globals: ^16.5.0
+    valibot: ^1.2.0
