chore: add publish config
Adds publish config so we automatically publish a public package.

--- a/packages/stdio/package.json
+++ b/packages/stdio/package.json
@@ -1,6 +1,9 @@
 {
 	"name": "@e18e/mcp",
 	"version": "0.0.1",
+	"publishConfig": {
+		"access": "public"
+	},
 	"description": "The official e18e MCP server for advising agents on modern and performant best practices",
 	"type": "module",
 	"bin": "./dist/index.js",
