--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
 		"changeset:version": "changeset version && pnpm --filter @e18e/mcp run update:version && git add --all",
 		"lint": "eslint . && prettier . --check",
 		"lint:fix": "eslint . --fix && prettier . --write",
-		"release": "changeset publish"
+		"release": "changeset publish",
+		"test": "vitest"
 	},
 	"packageManager": "pnpm@10.22.0",
 	"devDependencies": {
 		"@changesets/cli": "^2.29.7",
 		"@eslint/js": "catalog:tooling",
+		"@tmcp/transport-in-memory": "catalog:mcp",
 		"@types/node": "catalog:tooling",
 		"@typescript/native-preview": "catalog:tooling",
 		"eslint": "catalog:tooling",
 		"globals": "catalog:tooling",
 		"prettier": "catalog:tooling",
-		"typescript-eslint": "catalog:tooling"
+		"typescript-eslint": "catalog:tooling",
+		"vitest": "catalog:tooling"
 	}
 }
