chore: fix working directory for publish to mcp

--- a/.github/workflows/publish-mcp.yml
+++ b/.github/workflows/publish-mcp.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Publish to MCP Registry
+        working-directory: packages/stdio
         env:
           MCP_KEY: ${{ secrets.MCP_KEY }}
         run: |
